testsuite/tests/gadt/T16427.stderr

T16427.hs:5:26: error:
    GADT constructor type signature cannot contain nested ‘forall’s or contexts
    In the definition of data constructor ‘C’
